--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cosmjs/proto-signing": "^0.30.1",
+    "@cosmjs/stargate": "^0.30.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/sdk": "^0.2.4",
     "@mui/material": "^5.13.2",
+    "bip39": "^3.1.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
